# rust-task-api

./: .env.example  .gitignore  Cargo.toml  DOCKERFILE
migrations/: 20260622182046_create_tasks_table.sql
src/: error.rs  main.rs
src/db/: mod.rs  pool.rs  tasks.rs
src/handlers/: tasks.rs
src/models/: task.rs
src/routes/: tasks.rs
tests/: api_tests.rs
