[package]
name = "task-api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = "0.8"
# Async runtime
tokio = { version = "1.0", features = ["full"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "tls-rustls"] }
# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
# Configuration
dotenvy = "0.15"
# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace"] }
# Error handling
thiserror = "2.0"
anyhow = "1.0"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
